--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     // --- KONFIGURASI ---
     const schoolLat = -7.541549; // GANTI KOORDINAT SEKOLAH
     const schoolLng = 108.696524; 
-    const maxRadius = 30; 
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzYoXi_sjPkzhdFiax27vSUJDV4OgfOPkiqvHgrIqJN9scEY1K-HpLDMKhPUVIWPl75qw/exec'; 
+    const maxRadius = 50; 
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxI-C1VyExxd6I8Ldyha3I6kUEozjgW2p1uVjGOiqDLSfU4Wb6v8s3X1Xrpisk9KpVZ8w/exec'; 
 
     const selectNama = document.getElementById('namaGuru');
     const statusDisplay = document.getElementById('status');
@@ -116,8 +116,41 @@
             btnAbsen.innerText = "Kirim Absen";
         });
     };
+    // Ganti fungsi fotoInput.onchange lama dengan yang ini:
+fotoInput.onchange = function() {
+    const file = this.files[0];
+    if (!file) return;
+
+    const reader = new FileReader();
+    reader.readAsDataURL(file);
+    reader.onload = function(event) {
+        const img = new Image();
+        img.src = event.target.result;
+        img.onload = function() {
+            // LOGIKA KOMPRESI FOTO
+            const canvas = document.createElement('canvas');
+            const MAX_WIDTH = 800; // Ukuran lebar maksimal
+            let width = img.width;
+            let height = img.height;
+
+            if (width > MAX_WIDTH) {
+                height *= MAX_WIDTH / width;
+                width = MAX_WIDTH;
+            }
+
+            canvas.width = width;
+            canvas.height = height;
+            const ctx = canvas.getContext('2d');
+            ctx.drawImage(img, 0, 0, width, height);
+
+            // Konversi ke JPEG dengan kualitas 0.7 (Kompresi)
+            base64Foto = canvas.toDataURL('image/jpeg', 0.7); 
+            preview.src = base64Foto;
+            preview.style.display = "block";
+        }
+    };
+};
 </script>
 
 </body>
 </html>
-
